--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -36,7 +36,7 @@
 
   <br>
   </div>
-  <%= link_to profiles_path(@profile), { class: "btn btn-primary mx-4 mt-5" } do %>
+  <%= link_to profiles_path, { class: "btn btn-primary mx-4 mt-5" } do %>
       Back To All Devs
   <% end %>
 </div>
